--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,11 @@
 max-width:600px;
 display:block;
 margin: 0 auto;
+padding-bottom: 40px;
+}
+
+.App-footer{
+  text-align: center;
+  margin: 50px 0;
+
 }
