--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App-logo {
-max-width:600px;
+max-width:250px;
 display:block;
 margin: 0 auto;
-padding-bottom: 40px;
+padding-top:20px;
 }
 
 .App-footer{
@@ -10,3 +10,4 @@ padding-bottom: 40px;
   margin: 50px 0;
 
 }
+
