--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,3 +1,22 @@
 .Dictionary {
     text-align: center;
 }
+
+body{
+    background-color: #2FA4FF;
+
+}
+
+.Dictionary section {
+    background-color: #E8FFC2;
+    padding: 30px;
+    border-radius: 6px;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
+    margin: 20px 0;
+}
+
+.Dictionary input {
+    width:100%;
+    padding: 6px 4px;
+    border: 1px solid #ddd;
+}
