--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 .App-logo {
 max-width:250px;
 display:block;
-margin: 0 auto;
 padding-top:20px;
+float:left;
+
 }
 
 .App-footer{
   text-align: center;
   margin: 50px 0;
+
 
 }
 
