--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -6,7 +6,8 @@ body{
 
 .Dictionary section {
     background-color: #E8FFC2;
-    padding: 30px;
+    padding: 50px;
+    
     border-radius: 6px;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
     margin: 20px 0;
@@ -18,12 +19,24 @@ body{
     border: 1px solid #ddd;
 }
 .result-main{
-    padding-bottom:30px;
+    padding-bottom:60px;
     font-family: 'Dancing Script', cursive;
     font-size: 64px;
     color: #0E185F;
     text-align: center;
     margin-right:200px;
-    margin-top: 20px;
+    margin-top: 150px;
    }
+  
  
+   .Dictionary .form-btn{
+       background-color: #2FA4FF;
+       border-radius: 13px;
+       color:#E8FFC2;
+       font-size:18px;
+       height:40px;
+       width:100px;
+       transition: 1ms ease-in-out;
+       margin-left:10px;
+
+   }
